--- a/index.html
+++ b/index.html
@@ -1,87 +1,98 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=100%, initial-scale=1">
-        <title>与李先生聊天中</title>
-        <link href="css/main.min.css" rel="stylesheet" type="text/css">
-        <link rel="Shortcut Icon" href="favicon.ico"/>
-        <link rel="preload" href="img/love-the-girl.jpg" as="image">
-        <link rel="preload" href="img/news-wuhanfeiyan.jpg" as="image">
-        <link rel="preload" href="img/separate.jpeg" as="image">
-        <link rel="preload" href="img/in-sichuan.jpeg" as="image">
-        <link rel="preload" href="img/lucky-me.jpg" as="image">
-        <link rel="preload" href="img/breakfast.jpg" as="image">
-        <link rel="preload" href="img/exercise-together.jpg" as="image">
-        <link rel="preload" href="img/travel.jpg" as="image">
-        <link rel="preload" href="img/foot.jpg" as="image">
-        <link rel="preload" href="img/marry-me.png" as="image">
-        <link rel="preload" href="img/kiss-my-princess.png" as="image">
-    </head>
-    <body>
-        <div id="mobile" :class="{ 'has-prompt': hasPrompt }">
-            <div id="mobile-head">
-                <div id="mobile-head-title">与李先生聊天中</div>
-            </div>
-            <div id="mobile-body">
-                <div id="mobile-body-bg"></div>
-                <div id="mobile-body-content">
-                    <div id="mock-msg-row" class="msg-row">
-                        <div id="mock-msg" class="msg" v-html="latestMsgContent"></div>
-                    </div>
-                    <div class="msg-row"
-                        v-for="(msg, index) in messages"
-                        :key="index"
-                        :class="msg.author === 'author' ? 'msg-author' : 'msg-me'">
-                        <div class="msg"
-                            :class="'msg-bounce-in-' + (msg.author === 'author' ? 'left': 'right')"
-                            :style="msg.width && msg.height && {width: msg.width - 26 + 'px', height: msg.height - 18 + 'px'}"
-                            v-html="msg.content"></div>
-                    </div>
-                </div>
-            </div>
-            <div id="mobile-foot">
-                <div id="prompt">
-                    <div id="prompt-head">
-                        <div class="say-something">我想说……</div>
-                        <a href="javascript:;" class="close-btn"
-                            v-on:click="togglePrompt(false)"></a>
-                    </div>
-                    <div id="prompt-body">
-                        <ul class="responses" v-if="lastDialog">
-                            <li v-for="res in lastDialog.responses">
-                                <a href="javascript:;" v-on:click="respond(res)">{{ res.content }}</a>
-                            </li>
-                        </ul>
-                        <div class="next-topic"
-                            v-if="!lastDialog || !lastDialog.responses">
-                            <ul class="topics">
-                                <li v-for="topic in nextTopics">
-                                    <a href="javascript:;" v-on:click="ask(topic)">{{ topic.brief }}</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div id="input-hint" class="say-something"
-                    v-on:click="togglePrompt(true)"
-                    :class="{'clickable': !isTyping }">
-                    <span v-if="!isTyping">我想说……</span>
-                    <span v-if="isTyping">李先生正在输入中</span>
-                </div>
-            </div>
-            <div id="prompt-bg" v-on:click="togglePrompt(false)"></div>
-        </div>
+<!DOCTYPE html
+	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-        <div class="extra-link" id="meta-link">
-            <a class="letters" href="https://github.com/wongjohn/for-my-love" target="_blank">
-                源码
-            </a>
-        </div>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>献给宝贝的浪漫爱心</title>
 
-        <script src="//cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
-        <script src="//cdn.bootcss.com/vue/2.2.6/vue.min.js"></script>
+	<style type="text/css">
+		@font-face {
+			font-family: digit;
+			src: url('digital-7_mono.ttf') format("truetype");
+		}
+	</style>
 
-        <script src="js/index-min.js"></script>
-    </body>
+	<link href="css/default.css" type="text/css" rel="stylesheet">
+	<script type="text/javascript" src="js/jquery.js"></script>
+	<script type="text/javascript" src="js/garden.js"></script>
+	<script type="text/javascript" src="js/functions.js"></script>
+
+</head>
+
+<body>
+	<div style="text-align:center;clear:both;">
+		<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
+		<script src="/follow.js" type="text/javascript"></script>
+	</div>
+	<div id="mainDiv">
+		<div id="content">
+			<div id="code">
+			<span class="keyword">亲爱的</span> 慧慧宝贝<br />
+			<span class="comments">在这个繁星点点的夜晚，我鼓起勇气，想要向你倾诉我内心的真实感受。 </span><br />
+			<span class="comments">我喜欢你，不仅仅是因为你的美丽，更是因为你的内在美。你的善良、聪明和勇敢总是让我为你倾倒。</span><br />
+			<br />
+			<span class="placeholder"/><span class="comments">我知道，表白可能会让你感到意外，甚至有些尴尬。但我真心希望你能给我一个机会，让我能够更好地了解你，也让你更好地了解我。
+				<br>如果你愿意，我们可以一起去看电影、散步或者吃饭。在这个过程中，我们可以分享彼此的故事、兴趣和梦想。也许，在这些简单的时刻里，我们能够发现更多共同点，也能够更深入地了解彼此。</span><br />
+			<span class="placeholder"/><span class="comments">我明白，爱情需要时间和耐心去培养。所以，我不会急于求成，也不会给你太大的压力。我只希望你能给我一个机会，让我能够在你的身边守护你、关心你。</span><br />
+			<span class="placeholder"/>希望未来的我们能够长久的陪伴，我也会努力地展示自我，奋力追赶在前方等候的你。<br />
+			<br>
+			<br>
+			我想对你说:<br />
+			宝贝，爱你哟<br />
+		</div>
+			<div id="loveHeart">
+				<canvas id="garden"></canvas>
+				<div id="words">
+					<div id="messages">
+						与你相识是我一生幸福的时刻。
+						<div id="elapseClock"></div>
+					</div>
+					<div id="loveu">
+						我会一直喜欢你。<br />
+						<div class="signature">幸福小狗</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script type="text/javascript">
+		var offsetX = $("#loveHeart").width() / 2;
+		var offsetY = $("#loveHeart").height() / 2 - 55;
+		var together = new Date();
+		together.setFullYear(2024);
+		together.setMonth(6);
+		together.setDate(22)
+		together.setHours(0);
+		together.setMinutes(0);
+		together.setSeconds(0);
+		together.setMilliseconds(0);
+
+		if (!document.createElement('canvas').getContext) {
+			var msg = document.createElement("div");
+			msg.id = "errorMsg";
+			msg.innerHTML = "Your browser doesn't support HTML5!<br/>Recommend use Chrome 14+/IE 9+/Firefox 7+/Safari 4+";
+			document.body.appendChild(msg);
+			$("#code").css("display", "none")
+			$("#copyright").css("position", "absolute");
+			$("#copyright").css("bottom", "10px");
+			document.execCommand("stop");
+		} else {
+			setTimeout(function () {
+				startHeartAnimation();
+			}, 5000);
+
+			timeElapse(together);
+			setInterval(function () {
+				timeElapse(together);
+			}, 500);
+
+			adjustCodePosition();
+			$("#code").typewriter();
+		}
+	</script>
+
+</body>
+
 </html>
