--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
-			<span class="keyword">亲爱的</span> 慧慧宝贝<br />
+			<span class="keyword">亲爱的</span> 晗晗宝贝<br />
 			<span class="comments">在这个繁星点点的夜晚，我鼓起勇气，想要向你倾诉我内心的真实感受。 </span><br />
 			<span class="comments">我喜欢你，不仅仅是因为你的美丽，更是因为你的内在美。你的善良、聪明和勇敢总是让我为你倾倒。</span><br />
 			<br />
@@ -62,8 +62,8 @@
 		var offsetY = $("#loveHeart").height() / 2 - 55;
 		var together = new Date();
 		together.setFullYear(2024);
-		together.setMonth(6);
-		together.setDate(22)
+		together.setMonth(7);
+		together.setDate(1)
 		together.setHours(0);
 		together.setMinutes(0);
 		together.setSeconds(0);
