--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
 			<div id="code">
 			<span class="keyword">亲爱的</span> 晗晗宝贝<br />
 			<span class="comments">在这个繁星点点的夜晚，我鼓起勇气，想要向你倾诉我内心的真实感受。 </span><br />
-			<span class="comments">我喜欢你，不仅仅是因为你的美丽，更是因为你的内在美。你的善良、聪明和勇敢总是让我为你倾倒。</span><br />
+			<span class="comments">我喜欢你，不仅仅是因为你的美丽，更是因为你的内在美，你的善良、聪明和勇敢总是让我为你倾倒。</span><br />
 			<br />
-			<span class="placeholder"/><span class="comments">我知道，表白可能会让你感到意外，甚至有些尴尬。但我真心希望你能给我一个机会，让我能够更好地了解你，也让你更好地了解我。
-				<br>如果你愿意，我们可以一起去看电影、散步或者吃饭。在这个过程中，我们可以分享彼此的故事、兴趣和梦想。也许，在这些简单的时刻里，我们能够发现更多共同点，也能够更深入地了解彼此。</span><br />
-			<span class="placeholder"/><span class="comments">我明白，爱情需要时间和耐心去培养。所以，我不会急于求成，也不会给你太大的压力。我只希望你能给我一个机会，让我能够在你的身边守护你、关心你。</span><br />
+			<span class="placeholder"/><span class="comments">在这个星光闪烁的夜晚，我想借着月光，悄悄告诉你，你是我心中最亮的那颗星。每当我抬头仰望，都能感受到你的温暖和光芒，它们照亮了我前行的道路，也温暖了我内心的每一个角落。
+				<br>你的笑容总是那么灿烂，仿佛阳光洒满大地。你的眼眸里闪烁着智慧的光芒，让我对你充满了敬意。你的温柔和体贴也让我感受到了久违的温暖，你的坚强和独立让我对你充满了敬佩。</span><br />
+			<span class="placeholder"/><span class="comments">我明白，爱情需要时间和耐心去培养。所以，我不会急于求成，也不会给你太大的压力。我会一直在你的身边守护你、关心你。</span><br />
+			<span class="placeholder"/><span class="comments">未来的路还很长，我会用我全部的爱和力量照顾你，让你感受到最真挚的幸福。</span><br />
 			<span class="placeholder"/>希望未来的我们能够长久的陪伴，我也会努力地展示自我，奋力追赶在前方等候的你。<br />
 			<br>
 			<br>
@@ -45,7 +46,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						与你相识是我一生幸福的时刻。
+						希望住在心里的人，以后也可以住在家里。
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
