--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
 			<span class="comments">在这个繁星点点的夜晚，我鼓起勇气，想要向你倾诉我内心的真实感受。 </span><br />
 			<span class="comments">我喜欢你，不仅仅是因为你的美丽，更是因为你的内在美，你的善良、聪明和勇敢总是让我为你倾倒。</span><br />
 			<br />
-			<span class="placeholder"/><span class="comments">在这个星光闪烁的夜晚，我想借着月光，悄悄告诉你，你是我心中最亮的那颗星。每当我抬头仰望，都能感受到你的温暖和光芒，它们照亮了我前行的道路，也温暖了我内心的每一个角落。
-				<br>你的笑容总是那么灿烂，仿佛阳光洒满大地。你的眼眸里闪烁着智慧的光芒，让我对你充满了敬意。你的温柔和体贴也让我感受到了久违的温暖，你的坚强和独立让我对你充满了敬佩。</span><br />
-			<span class="placeholder"/><span class="comments">我明白，爱情需要时间和耐心去培养。所以，我不会急于求成，也不会给你太大的压力。我会一直在你的身边守护你、关心你。</span><br />
+			<span class="placeholder"/><span class="comments">我想说一见面就喜欢上你了，我对你的调侃和玩笑，背后都是爱意的溢出，我很惶恐，闯进了一个人的世界，我不知道应该怎么办才好，我想把一切都做到最好。我想和你说，我每天说我想你，不是我正在想你，而是我忍不住想要告诉你，你还是记忆里那个与我温情相视的人，爱意满满，我好嫉妒一切拥有你的，我也想参与到你的过往，我当然不想让你一个人，下段旅途一定要和你幸福又丰盛</span><br />
+			<span class="placeholder"/><span class="comments">我爱你，不仅仅是一种感觉，更是一种承诺，一种责任，一种深深的眷恋和不舍，它不是一时冲动的产物，而是经过深思熟虑后的真挚情感，我爱你的美丽，你的善良，你的智慧，你的勇敢，你的一切一切，我爱你的笑容，它如同阳光般温暖，照亮了我内心的每一个角落，我愿意接纳你的全部，包括你的过去和未来。我愿意与你共同面对生活的挑战和困难，一起经历风雨，一起成长。我愿意为你付出我的一切，包括我的时间、我的精力、我的爱，希望你能幸福快乐地生活，我会尽我所能去呵护你、照顾你，保护你，让你感受到我的爱和温暖，我会尊重你的选择和决定，支持你追求自己的梦想和目标，最后，我想对你说，我爱你不仅仅是现在，更是未来的每一刻，我会用我全部的力量和勇气去守护这份爱情，让它成为我们生命中最美好的回忆</span><br />
 			<span class="placeholder"/><span class="comments">未来的路还很长，我会用我全部的爱和力量照顾你，让你感受到最真挚的幸福。</span><br />
 			<span class="placeholder"/>希望未来的我们能够长久的陪伴，我也会努力地展示自我，奋力追赶在前方等候的你。<br />
 			<br>
