--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
-			<span class="keyword">亲爱的</span> 蓝心宝贝<br />
+			<span class="keyword">亲爱的</span> 文文宝贝<br />
 			<span class="comments">我喜欢你，不仅仅是因为你的美丽，更是因为你的内在美，你的善良、聪明和勇敢总是让我为你倾倒。</span><br />
 			<br />
 			<span class="placeholder"/><span class="comments">我想说一见面就喜欢上你了，我对你的调侃和玩笑，背后都是爱意的溢出，我很惶恐，闯进了一个人的世界，我不知道应该怎么办才好，我想把一切都做到最好。我想和你说，我每天说我想你，不是我正在想你，而是我忍不住想要告诉你，你还是记忆里那个与我温情相视的人，爱意满满，我好嫉妒一切拥有你的，我也想参与到你的过往，我当然不想让你一个人，下段旅途一定要和你幸福又丰盛</span><br />
